--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
 
     </FrameLayout>
 
-    <com.hgyu.seds.ShapeFieldView
+    <com.hgyu.seds.views.ShapeFieldView
         android:id="@+id/shapeField"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -136,5 +136,5 @@
         android:max="100"
         android:progress="100"
         android:progressDrawable="@drawable/circle_shape"
-        android:visibility="visible" />
+        android:visibility="gone" />
 </FrameLayout>
